RESOLVED FIXED314170
[Smart Lists] Going into list format while composing mail does not keep style
https://bugs.webkit.org/show_bug.cgi?id=314170
Summary [Smart Lists] Going into list format while composing mail does not keep style
Jessica Cheung
Reported 2026-05-05 22:13:02 PDT
Attachments
Jessica Cheung
Comment 1 2026-05-05 22:30:32 PDT
EWS
Comment 2 2026-05-08 08:33:38 PDT
Committed 312887@main (ff708abf6cdb): <https://commits.webkit.org/312887@main> Reviewed commits have been landed. Closing PR #64339 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.